# AIoT_Neurusie

./: CMakeLists.txt  README.md  library.h
client/coap_client/: app.overlay  prj.conf
client/coap_client/src/: coap_client.c  coap_client_utils.c  coap_client_utils.h
include/: event_logger.h  hal.h  hal_stub.h  intersection_fsm.h  protocol.h  soft_timer.h  traffic_logic.h
model/: nrf54l15_intersection_model.json  nrf54l15_intersection_policy.h
server/coap_server/: app.overlay  prj.conf
server/coap_server/src/: coap_server.c  ot_coap_utils.c  ot_coap_utils.h
src/: event_logger.c  hal_arduino.c.template  hal_stub.c  intersection_fsm.c  main.c  protocol.c  soft_timer.c  traffic_logic.c
test/: test_common.h  test_event_logger.c  test_fsm.c  test_hal_stub.c  test_protocol.c  test_soft_timer.c  test_traffic_logic.c
